[package]
name = "libcruby-sys"
version = "0.1.0"
authors = [
  "Godfrey Chan <godfreykfc@gmail.com>",
  "Yehuda Katz <wycats@gmail.com>",
  "Peter Wagenet <peter.wagenet@gmail.com>"
]

[lib]
crate-type = ["cdylib"]

[features]
testing = ["cstr-macro", "lazy_static"]

[dependencies]
libc = "0.2"
cstr-macro = { version = "0.1", optional = true }
"lazy_static" = { version = "1.1", optional = true }
